# csv_analyzer

./: .gitignore  README.md  pyproject.toml  run.py
csv_analyzer/: __init__.py  main.py
csv_analyzer/backend/: analyzer.py  engine.py
csv_analyzer/core/: ipc.py  workspace.py
csv_analyzer/frontend/: main_window.py
csv_analyzer/frontend/components/: analysis_panel.py  cell_inspector.py  data_table.py  sidebar.py  sql_completer.py  sql_editor.py  welcome_page.py  workspace_picker.py
csv_analyzer/frontend/styles/: icons.py  theme.py
